--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
+
 <html>
-  <head>
-
-<h1>asoDOASOD<h2>
+<head>
+<title>Квест by fro0zzy</title>
+</head>
 <body>
-
-<header>
-
-
-
-
-    </header>
-
-
-  
-  
-  
-  </head>
-  
-    </body>
+<p align="left">Текст выровнен по левому краю страницы.</p>
+<p align="right">Текст справа страницы.</p>
+<p align="center" style="color:#ff0099; font-size:30px">
+Текст выровнен по центру, розового цвета, размером в 30 пикселей.</p>
+</body>
 </html>
