--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p align="center" style="color:#ff0099; font-size:30px">
-Текст выровнен по центру, розового цвета, размером в 30 пикселей.</p>
+  <big>Текст выровнен по центру, розового цвета, размером в 30 пикселей.</big></p>
 </body>
 </html>
