--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Квест by fro0zzy</title>
 </head>
 <body>
-<p align="center" style="color:#ff0099; font-size:30px">
+<p align="center" style="color:#e52121; font-size:50px">
   <big>Текст выровнен по центру, розового цвета, размером в 30 пикселей.</big></p>
 </body>
 </html>
