--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p align="center" style="color:#e52121; font-size:50px">
-  <big>Текст выровнен по центру, розового цвета, размером в 30 пикселей.</big></p>
+  <big><b>Текст выровнен по центру, розового цвета, размером в 30 пикселей.</b></big></p>
 </body>
 </html>
