--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <p align="center" style="color:#e52121; font-size:30px">
-  <big><b>Текст выровнен по центру, розового цвета, размером в 30 пикселей.</b></big></p>
+  <big><b>Ку, друг мой. (Имя твоё я забыл, без обид)</b></big></p>
+<p align="center" style="color:#e52121; font-size:30px">
+ <big><b>И так, приступим к первому заданию. Сразу же говорю, за подсказками ко мне в тг.</b></big></p>
 </body>
 </html>
