--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <p align="center" style="color:#e52121; font-size:30px">
   <big><b>Ку, друг мой. (Имя твоё я забыл, без обид)</b></big></p>
 <p align="center" style="color:#e52121; font-size:30px">
- <big><b>И так, приступим к первому заданию. Сразу же говорю, за подсказками ко мне в  <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=f1x3rrr'">телеграмм</a></b></big></p>
+ <big><b>И так, приступим к первому заданию. Сразу же говорю, за подсказками ко мне в  <a href="javascript://" style="color:#e52121; class="link" onclick="location.href='tg://resolve?domain=f1x3rrr'">телеграмм</a></b></big></p>
 </body>
 </html>
