--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <big><b>Ку, друг мой. (Имя твоё я забыл, без обид)</b></big></p>
 <p align="center" style="color:#e52121; font-size:30px">
  <big><b>И так, приступим к первому заданию. Сразу же говорю, за подсказками ко мне в  <a href="javascript://" style="color:#2263db; class="link" onclick="location.href='tg://resolve?domain=f1x3rrr'">телеграмм</a></b></big></p>
+   <p align="center" font-size:30px"><big><b>Картинка снизу тебе понадобиться в самом конце.</b></big></p>
    <p><img src="alf.jpg" alt="Это тебе понадобиться."></p>
    </body>
 </html>
